--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+crossterm = "0.29.0"
+flexi_logger = "0.31.2"
+log = "0.4.27"
+ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
