--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ crossterm = "0.29.0"
 flexi_logger = "0.31.2"
 log = "0.4.27"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+uuid = { version = "0.8", features = [ "serde", "v4"] }
+tui-markdown = "0.3.5"
