--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ log = "0.4.27"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 uuid = { version = "0.8", features = [ "serde", "v4"] }
 tui-markdown = "0.3.5"
+tui-textarea = "0.7.0"
