--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 uuid = { version = "0.8", features = [ "serde", "v4"] }
 tui-markdown = "0.3.5"
 tui-textarea = "0.7.0"
+reqwest = { version = "0.12", features = ["json"] }
+reqwest-streams = { version = "0.11", features=["json"] }
+tokio = { version = "1", features = ["full"] }
+futures-util = "0.3.31"
+serde_json = "1.0.143"
+serde = "1.0.219"
